--- a/Desafios/3/style.css
+++ b/Desafios/3/style.css
@@ -1,98 +1,118 @@
-* {
-    text-align: justify;
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --font0: Verdana, Geneva, Tahoma, sans-serif;
+    --font1: 'Passion One', cursive;
+    --font2: 'Sriracha', cursive;
 }
 
-header {
-    padding: 0px;
+
+* {
     margin: 0px;
+    padding: 0px;
+    font-size: 1em;
+    text-align: justify; 
 }
-header > nav {
-    background-color: rgb(0, 0, 0);
-    color: white;
-    padding: 50px;
+
+
+html, body {
+    min-height: 100vh;
+    background-color: darkgray;
+    font-family: var(--font0);
 }
+
+
+header {
+    padding: 30px;
+    background-color: black;
+}
+
 header > nav > h1 {
+    padding-top: 20px;
+    color: white;
+    font-family: var(--font1);
+    font-variant: small-caps;
+    font-size: 10vw;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif, cursive;
-    font-size: 70px;
-    line-height: 0px;
 }
+
 header > nav > p {
+    padding-bottom: 30px;
     color: white;
     text-align: center;
-    font-size: 17px;
 }
-header > nav > p > a {
+
+
+a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
-    transition-duration: .4s;
+    /* negrito */
 }
-header > nav > p > a:hover {
+
+a:hover {
     text-decoration: underline;
 }
 
-main {
-    
+
+main > section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    font-family: var(--font2);
+    font-size: 3.5vw;
+    line-height: 2em;
 }
-main > section > article {
-    padding: 10px;
-    margin: auto;
-    font-family: cursive;
-    font-size: 40px;
-    line-height: 100px;
+
+main > section> p {
+    padding-bottom: 2em;
+}
+
+main > section.normal {
+    background-color: white;
     color: black;
+
 }
 
-main > section > article > .estrofe1 {
+main > section.img {
+    background-color: rgb(16, 16, 16);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.552);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+main > section#img0{
     background-image: url(imagens/background001.jpg);
-    background-size: cover;
-    background-position: center left;
-    background-attachment: fixed;
-
-    color: white;
-}
-main > section > article > .estrofe1 > p {
-    background-color: rgba(0, 0, 0, 0.579);
-    display: inline-block;
-
-    margin: 20px;
+    background-position: right center;
 }
 
-main > section > article > .estrofe4 {
+main > section#img1{
     background-image: url(imagens/background002.jpg);
-    background-size: cover;
-    background-position: center left;
-    background-attachment: fixed;
-
-    color: white;
 }
-main > section > article > .estrofe4 > p {
-    background-color: rgba(0, 0, 0, 0.579);
+
+main > section.img > p {
     display: inline-block;
-
-    margin: 20px;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.27);
+    text-shadow: 1px 1px 0px black;
 }
+
 
 footer {
+    padding: 10px;
     background-color: black;
-    padding: 0px;
-    margin: 0px;
 }
+
 footer > nav {
     background-color: rgb(0, 0, 0);
     color: black;
-    font-size: 23px;
+    font-size: 2vw;
 }
+
 footer > nav > p {
     text-align: center;
     color: white;
-}
-footer > nav > p > a {
-    color: white;
-    text-decoration: none;
-    transition-duration: .4s;
-}
-footer > nav > p > a:hover {
-    text-decoration: underline;
 }
