--- a/Projeto One-Piece/styles/responsivo.css
+++ b/Projeto One-Piece/styles/responsivo.css
@@ -39,6 +39,22 @@
         transform: scale(1.07);
         box-shadow: 0 0 10px #D9D9D9;
     }
+
+    #imgChopper {
+        height: 300px;
+    }
+    #imgZoro {
+        height: 330px;
+    }
+    #imgLuffy {
+        height: 280px;
+    }
+    #imgNami {
+        height: 300px;
+    }
+    #imgSanji {
+        height: 300px;
+    }
 }
 
 @media (max-width: 425px) {
